# fjml

./: .gitignore  LICENSE  README.md  fjml.code-workspace  pyproject.toml  requirements.1txt  requirements.txt
.github/workflows/: python-publish.yml
fjml/: __init__.py  checks.py  cli_tooling.py  constants.py  data_types.py  error_types.py  object_enums.py  operation_classes.py  type_checker.py  utils.py
fjml/constant_controls/: custom_responsive_row.py  size_aware_control.py
fjml/parsers/: builder.py  compiler.py  control_register.py  renderer.py
fjml/registry/: control_registry.json
src/fjml/: __init__.py  cli_tooling.py  constants.py  data_types.py  error_types.py  object_enums.py  operation_classes.py  type_checker.py  utils.py
src/fjml/compiler/: checks.py  compiler.py
src/fjml/constant_controls/: __init__.py  custom_responsive_row.py  size_aware_control.py
src/fjml/display/: builder.py  renderer.py
src/fjml/parsers/: builder.py  cli_tooling.py  compiler.py  constants.py  control_register.py  renderer.py  utils.py
src/fjml/registry/: control_register.py  control_registry  control_registry.json  other_controls_registry.py
src/fjml/types_errors/: data_types.py
tests/: hold.py  type_checker_test.py  ui_test.py
tests/controls/: __init__.py  input_controls.py  sheet_table.py  test_controls.py  theme.py
tests/modules/: __init__.py  auto_complete_handler.py  excel_handler.py  tools.py  type_checker.py  undo_redo.py  word_excel_handler.py
tests/programs/excel_to_word/: func.py  ui.json
tests/programs/excel_to_word/extra/: constants_entry_ui.json  excel_entry_ui.json  file_entry_ui.json  sheet_view_ui.json  ui_constants.json
tests/programs/test_compiler/: func.py  ui.json
tests/programs/test_compiler/extra/: constants.json  submit_btn.json  text_container.json
tests/programs/test_compiler_graph/: func.py  ui.json
tests/test_files/: docxtpl_test.docx  test_data.xlsx
tests/ui_test/: ui_test.py
tests/ui_test/program/excel_to_word/: func.py  ui.json
tests/ui_test/program/excel_to_word/extra/: constants_entry_ui.json  excel_entry_ui.json  file_entry_ui.json  sheet_view_ui.json  ui_constants.json
tests/ui_test_program/: func.py  style_sheet.style.json  ui.json
tests/ui_test_program/extra/: loop_tests.json  refs_tests.json  route_test.json
