[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fjml"
version = "0.0.1"
authors = [
  { name="loafthecomputerphile", email="loafdcomputerphile@gmail.com" },
]
description = "A small example package"
readme = "README.md"
keywords = ["flet", "gui"]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "flet>=0.22.0",
  "nest_asyncio>=1.5.9",
  "typing_extensions>=4.11.0"
]

[project.scripts]
fjml = "fjml.cli_tooling:main"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"